--- a/_config.yml
+++ b/_config.yml
@@ -13,22 +13,21 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: DataCenter@UPSud
+email: jouvin@lal.in2p3.fr
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Site Web du Mésocentre de l'Université Paris Sud
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username: meso-upsud 
 
 # Build settings
 markdown: kramdown
-theme: minima
 plugins:
   - jekyll-feed
+sass:
+  style: compress
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
