Bind collection name associated with a menu to the menu name
- The collection name is the slugified ASCII version of the menu
  name (with - changed into _) instead of the page name previously
- Rename _30services to services

--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ sass:
 
 # Collections
 collections:
-  30services:
+  services:
     output: true
     permalink: /services/:title.html
 #benchmarking:
