--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,9 @@ sass:
 
 # Collections
 collections:
+  docs_donnees:
+    output: true
+    permalink: /DocsDonnees/:path.html
   le_projet:
     output: true
     permalink: /projet/:name.html
